web-apps/joossam/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joossam
  labels:
    app: joossam
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: joossam
