web-apps/joossam/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joossam-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - joossameng.kro.kr
    secretName: joossam-tls
  rules:
  - host: joossameng.kro.kr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: joossam
            port:
              number: 80
